build: Modify open